feat: surface rule outputs in demo

--- a/public/index.html
+++ b/public/index.html
@@ -175,8 +175,8 @@
         </div>
         <div class="grid" style="margin-top: 1rem;">
           <div>
-            <label for="methodOptions">Manufacturing methods (comma separated)</label>
-            <textarea id="methodOptions">machining,casting,forging,3d printing</textarea>
+            <label for="methodOptions">Manufacturing processes (comma separated)</label>
+            <textarea id="methodOptions">CNC,FDM,MJF,SLS</textarea>
           </div>
           <div>
             <label for="materialOptions">Materials (comma separated)</label>
